# IUAFPro

./: .env  .gitignore  CALIFICACIONES GLOBALES2.xlsm  COPIA control alumnos totales 2022.xlsm  Dockerfile  IUAF Registro  de ingresos FINAL.xlsm  IUAF Registro  de ingresos FINAL84.xlsm  README.md  compose.yml  control alumnos totales 202284.xlsm  copia IUAF Registro  de ingresos FINAL.xlsm  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  replace.txt  requirements.txt  test_import_reportlab.py
.github/: copilot-instructions.md
academico/: admin.py  forms.py  models.py  services.py  urls.py  views.py
academico/migrations/: 0001_initial.py  0002_calificacion.py  0003_alter_materia_options_materia_programa_and_more.py  0004_profesor.py  0005_calificacion_fecha_calificacion_profesor.py  0006_profesor_ciudad_profesor_especialidad.py  0007_profesormateria_materia_profesores_and_more.py  0008_profesor_banco_profesor_clave_interbancaria_and_more.py  0009_profesor_grado_academico.py
alumnos/: admin.py  apps.py  cartera.py  clip_api.py  email_utils.py  emailing.py  emails.py  forms.py  models.py  permisos.py  servicios.py  signals.py  urls.py  utils.py  views.py
alumnos/fixtures/: estatus.json
alumnos/migrations/: 0001_initial.py  0002_alter_alumno_curp_and_more.py  0002_remove_alumno_sede_informacionescolar_sede_and_more.py  0004_alumno_user.py  (+49 more)
campusiuaf/: asgi.py  settings.py  urls.py  wsgi.py
cobros/: admin.py  models.py  services.py  urls.py  utils.py  views.py
lms/: admin.py  forms.py  models.py  urls.py  views.py
salidas/: movimientos_2022.json
(+138 files in other folders)
