[tool.poetry]
name = "campusiuaf"
version = "0.1.0"
description = "Django project"
authors = ["yatniel gon <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
pillow = "^10.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13"
pytest = "^8.0"
pytest-django = "^4.8"
coverage = "^7.5"
django-debug-toolbar = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
